# ml-model-deploy-fastapi

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: auto-review.yml  ci.yml  deploy.yml
models/: model.joblib  prepare_model.py
src/backend/app/: main.py
src/backend/app/api/: routes.py  schemas.py
src/backend/app/core/: auth.py  config.py  logging_config.py  model_loader.py
src/backend/app/services/: predict.py
src/backend/tests/: conftest.py  test_auth.py  test_predict.py
